<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/monkey_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/moneky_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/about_fonts_monkey_button_text"/>

    <TextView
        android:id="@+id/monkey_created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/monkey_created_by_text" />

    <TextView
        android:id="@+id/moneky_misti_biz_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/monkey_biz_name_text" />

    <TextView
        android:id="@+id/monkey_misti_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/monkey_misti_name" />

    <TextView
        android:id="@+id/monkey_visit_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/monkey_visit_web" />

    <TextView
        android:id="@+id/monkey_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/monkey_website" />

    <ImageView
        android:id="@+id/monkey_misti_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/monkey_logo_desc"
		android:src="@drawable/misti_logo" />

    <Button
        android:id="@+id/monkey_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/monkey_done_button_text" />

</LinearLayout>
