<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/font_chooser_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/font_chooser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/font_chooser_title_text"
        android:textColor="@color/general_text_color" />

    <Spinner
        android:id="@+id/font_chooser_spin_font_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:prompt="@string/font_name_spinner_prompt"/>

    <Spinner
        android:id="@+id/font_chooser_spin_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:padding="5dp"
        android:prompt="@string/font_size_spinner_prompt"/>

    <TextView
        android:id="@+id/font_chooser_tv_preview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/font_chooser_preview_label"
        android:textColor="@color/general_text_color" />

    <TextView
        android:id="@+id/font_chooser_tv_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/font_chooser_preview_text"
        android:textColor="@color/general_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        style="?android:attr/buttonBarButtonStyle">

        <Button
            android:id="@+id/font_chooser_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/font_chooser_cancel_button_text"
            android:textColor="@color/black_color" />

        <Button
            android:id="@+id/font_chooser_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/font_chooser_ok_button_text"
            android:textColor="@color/black_color" />

    </LinearLayout>

</LinearLayout>
