<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_entry_sub_layout" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_entry_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/add_entry_cancel_button_text" />

        <TextView
            android:id="@+id/add_entry_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/add_entry_header_text"
            android:textColor="@color/general_text_color" />

        <Button
            android:id="@+id/add_entry_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/add_entry_confirm_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/add_entry_title_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/add_entry_title_prompt_text"
        android:textColor="@color/general_text_color" />

    <EditText
        android:id="@+id/add_entry_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/add_entry_title_hint"
        android:textColor="@color/general_text_color" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/add_entry_text_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_entry_text_promt_text"
        android:textColor="@color/general_text_color" />

    <EditText
        android:id="@+id/add_entry_text_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/add_entry_text_hint"
        android:maxLines="5"
        android:singleLine="false"
        android:textColor="@color/general_text_color" />

   

</LinearLayout>

