<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/export_notebook_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/export_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/export_header_text"
        android:textColor="@color/general_text_color" />

    <RadioGroup
        android:id="@+id/export_radio_group"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/export_as_notebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_as_notebook_text"
            android:textColor="@color/general_text_color" />

        <RadioButton
            android:id="@+id/export_as_textfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_as_textfile_text"
            android:textColor="@color/general_text_color" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/export_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/export_cancel_button_text" />

        <Button
            android:id="@+id/export_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/export_confirm_button_text" />

    </LinearLayout>

</LinearLayout>
